--- a/build.gradle
+++ b/build.gradle
@@ -12,14 +12,16 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    testImplementation group: 'com.h2database', name: 'h2', version: '2.1.214'
+    implementation 'com.h2database:h2:2.1.212'
     implementation 'org.hibernate.orm:hibernate-core:6.3.1.Final'
     implementation group: 'org.flywaydb', name: 'flyway-core', version: '9.22.3'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_19
     targetCompatibility = JavaVersion.VERSION_19
+    sourceCompatibility = JavaVersion.VERSION_19
 }
 test {
     useJUnitPlatform()
